trying to fix contactanos font-size when collapsing

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ div.carousel {
 	font-weight: bold;
 }
 
-.conta {
+.show {
 	font-size: 16px;
 }
 			
